--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
+<script src="script.js" defer></script>
     <link rel="stylesheet" href="general.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -411,10 +412,13 @@
         <header class="header">
           <form action="">
             <div class="search-box ">
-              <ion-icon name="search-outline"></ion-icon>
+              <ion-icon class="search-icon" name="search-outline"></ion-icon>
               <input type="text" placeholder="Search Twitter" class="search">
             </div>
           </form>
+          <div class="search-options hidden">
+            <span class="search-desc ">Try searching for people, topics, or keywords</span>
+          </div>
         </header>
         <div class="trends">trends</div>
         <div class="follow">follow</div>
