--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Rubik:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://unpkg.com/phosphor-icons"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
@@ -50,6 +51,7 @@
                     ></path>
                   </svg>
                   <span>Home</span>
+                  <h3 class="heading-tertiary"></h3>
               </li></a
               >
               <a class="nav-link" href="#">
@@ -409,7 +411,7 @@
         </div>
       </main>
       <aside class="right-side">
-        <header class="header">
+        <header class="header sticky">
           <form action="">
             <div class="search-box ">
               <ion-icon class="search-icon" name="search-outline"></ion-icon>
@@ -420,7 +422,74 @@
             <span class="search-desc ">Try searching for people, topics, or keywords</span>
           </div>
         </header>
-        <div class="trends">trends</div>
+        <div class="trends">
+          <h2 class="secondary-heading">Trends for you</h2>
+          <ul class="trends-list">
+            <li><div class="trend-item">
+              <a href="#" class="trends-icon"><i class="ph-dots-three"></i></a>
+              <span class="trend-subheading">
+                Politics - Trending
+              </span>
+              <h3 class="heading-tertiary">Peter Thiel</h3>
+            </div></li>
+            <li><div class="trend-item">
+              <a href="#" class="trends-icon"><i class="ph-dots-three"></i></a>
+              <span class="trend-subheading">
+                Trending in Bosnia&Hezegovina
+              </span>
+              <h3 class="heading-tertiary">Christian Walker</h3>
+              <span class="trend-tweets">1,088 Tweets</span>
+            </div></li>
+            <li><div class="trend-item">
+              <a href="#" class="trends-icon"><i class="ph-dots-three"></i></a>
+              <span class="trend-subheading">
+                Trending in Bosnia&Hezegovina
+              </span>
+              <h3 class="heading-tertiary">Sarajevo</h3>
+              <span class="trend-tweets">35.9K Tweets</span>
+            </div></li>
+            <li><div class="trend-item">
+              <a href="#" class="trends-icon"><i class="ph-dots-three"></i></a>
+              <span class="trend-subheading">
+                Trending in Bosnia&Hezegovina
+              </span>
+              <h3 class="heading-tertiary">Dump</h3>
+              <span class="trend-tweets">4,416 Tweets</span>
+            </div></li>
+            <li><div class="trend-item">
+              <a href="#" class="trends-icon"><i class="ph-dots-three"></i></a>
+              <span class="trend-subheading">
+                Travel - Trending
+              </span>
+              <h3 class="heading-tertiary">#Ukraine</h3>
+            </div></li>
+            <li><div class="trend-item">
+              <a href="#" class="trends-icon"><i class="ph-dots-three"></i></a>
+              <span class="trend-subheading">
+                Trending in Bosnia&Hezegovina
+              </span>
+              <h3 class="heading-tertiary">Serbia</h3>
+              <span class="trend-tweets">1,220 Tweets</span>
+            </div></li>
+            <li><div class="trend-item">
+              <a href="#" class="trends-icon"><i class="ph-dots-three"></i></a>
+              <span class="trend-subheading">
+                Trending in Bosnia&Hezegovina
+              </span>
+              <h3 class="heading-tertiary">bosnia and herzegovina</h3>
+              <span class="trend-tweets">20.1K Tweets</span>
+            </div></li>
+            <li><div class="trend-item">
+              <a href="#" class="trends-icon"><i class="ph-dots-three"></i></a>
+              <span class="trend-subheading">
+                Trending in Bosnia&Hezegovina
+              </span>
+              <h3 class="heading-tertiary">Cheeto</h3>
+              <span class="trend-tweets">3,336 Tweets</span>
+            </div></li>
+          </ul>
+          <a href="#" class="trend-item trends-more">Show more</a>
+        </div>
         <div class="follow">follow</div>
         <footer>link</footer>
       </aside>
